# invenio-theme-kth

./: .gitkeep  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  babel.ini  messages.pot  run-js-linter.sh  run-tests.sh  setup.cfg
.tx/: config
invenio_theme_kth/: __init__.py  config.py  ext.py  views.py  webpack.py
invenio_theme_kth/assets/semantic-ui/js/invenio_theme_kth/: MyComponent.js
invenio_theme_kth/assets/semantic-ui/js/invenio_theme_kth/deposit/: CommunityHeaderOverride.js  RDMDepositFormOverride.js  index.js
invenio_theme_kth/assets/semantic-ui/less/invenio_theme_kth/: theme.config
invenio_theme_kth/assets/semantic-ui/translations/invenio_app_rdm/: i18next.js  package-lock.json  package.json  translations.pot
invenio_theme_kth/assets/semantic-ui/translations/invenio_app_rdm/messages/: index.js
invenio_theme_kth/assets/semantic-ui/translations/invenio_app_rdm/messages/en/: translations.json
invenio_theme_kth/assets/semantic-ui/translations/invenio_app_rdm/messages/sv/: translations.json
invenio_theme_kth/templates/semantic-ui/invenio_app_rdm/records/: deposit_override.html
invenio_theme_kth/translations/: messages.pot
invenio_theme_kth/translations/sv/LC_MESSAGES/: messages.po
invenio_theme_kth/utils/: registration_form.py
tests/: test_invenio_theme_kth.py
