
[metadata]
name = invenio-theme-kth

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    invenio_theme_kth_views = invenio_theme_kth.views:create_blueprint
invenio_assets.webpack =
    invenio_theme_kth_theme = invenio_theme_kth.webpack:theme
