
[metadata]
name = invenio-theme-kth
version = attr: invenio_theme_kth.__version__
description = invenio-theme-kth
long_description_content_type= text/markdown
long_description = file:README.md, CHANGES.md
keywords=invenio rdm config kth theme
license=MIT
author=KTH Royal Institute of Technology
author_email=info@kth.se
platforms=any,
url=https://github.com/Samk13/invenio-theme-kth
classifiers=
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    invenio_app_rdm>=10.0.0


[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black>=0.3.12
    pytest-runner>=3.0.0,<5
    invenio_search>=2.0.0
    opensearch_dsl>=2.0.0
    twine>=4.0.1

[options.entry_points]
invenio_base.blueprints =
    invenio_theme_kth_views = invenio_theme_kth.views:create_blueprint
invenio_assets.webpack =
    invenio_theme_kth_theme = invenio_theme_kth.webpack:theme
invenio_config.module =
    zzz_invenio_app_rdm = invenio_theme_kth.config
[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_theme_kth --cov-report=term-missing
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_theme_kth

[isort]
profile=black

[pydocstyle]
add_ignore = D401, E501, D100

[pylint]
add_ignore = C0114

[aliases]
test = pytest